# DT-xml

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  PUBLISH.md  README.md  README_EN.md  docker-compose.yml  pyproject.toml  tmp_topics.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_NOTES_v0.1.0.md  REPOSITORY_SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: config.yaml
config/schema/: declaration_schema.yaml
config/tenants/: default.yaml
docs/: BUSINESS_VALUE.md  FAQ.md  QUICK_START.md  api_spec.md  architecture.md  data_format.md  mandatory_fields.md  tenant_configuration.md
examples/: README.md  USE_CASES.md
examples/data/: sample_declaration.json  sample_declaration.xml
examples/scripts/: index_example.py  search_example.py
scripts/: create_github_repo.sh  ingest.py  publish_to_github.sh
src/dt_xml/: __init__.py
src/dt_xml/api/: main.py
src/dt_xml/chunker/: __init__.py  section_extractor.py  semantic_chunker.py
src/dt_xml/config/: __init__.py  models.py  settings.py
src/dt_xml/embedding/: __init__.py  models.py  multilingual_embedder.py
src/dt_xml/normalizer/: __init__.py  code_normalizer.py  field_normalizer.py  language_normalizer.py
src/dt_xml/ocr/: __init__.py  field_extractor.py  ocr_normalizer.py  ocr_processor.py
src/dt_xml/parser/: __init__.py  schema_validator.py  xml_parser.py
src/dt_xml/reranker/: __init__.py  adaptive_reranker.py  explainability.py  query_complexity.py
src/dt_xml/schema/: __init__.py  field_mapper.py  schema_manager.py  schema_registry.py  schema_validator.py
src/dt_xml/search/: __init__.py  dense_search.py  hybrid_search.py  metadata_filter.py  sparse_search.py
src/dt_xml/storage/: __init__.py  document_store.py  metadata_store.py  vector_store.py
tests/: test_parser.py  test_search.py
(+10 files in other folders)
